tests/solidity-semantic-tests/out/errors/require_error_function_pointer_parameter/C.clear.teal
#pragma version 12
#pragma typetrack false

// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_function_pointer_parameter.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
